# KLwARM

./: CMakeLists.txt  README.md  ROADMAP.md
include/anwr/: cpu_state.h  decoder.h  graphics.h  pe_loader.h  win32_runtime.h
src/loader/: pe_loader.c
src/runtime/: graphics.c  win32_runtime.c
src/translator/: cpu_translator.c  decoder.c  jit_engine.c
